Fix grain point overlap in grain-debug.html
- Pass minDistance parameter to generateFallbackGrains() to prevent overlap
- Ensures fallback points respect minimum distance constraint
- Brings grain-debug.html in line with grain-visualizer.html implementation
- Mark corresponding TODO item as completed

--- a/public/grain-debug.html
+++ b/public/grain-debug.html
@@ -338,7 +338,7 @@
                 
                 if (poissonPoints.length < params.grainDensity * 0.5) {
                     console.log(`Using fallback: ${poissonPoints.length} < ${params.grainDensity * 0.5}`);
-                    finalPoints = this.grainGenerator.generateFallbackGrains(poissonPoints, params.grainDensity);
+                    finalPoints = this.grainGenerator.generateFallbackGrains(poissonPoints, params.grainDensity, params.minDistance);
                     fallbackPoints = finalPoints.slice(poissonPoints.length);
                 }
                 
