--- a/public/test-devassert.html
+++ b/public/test-devassert.html
@@ -1,29 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>Test devAssert</title>
-</head>
-<body>
-  <h1>devAssert Test</h1>
-  <p>Check the browser console for output.</p>
-  
-  <script type="module">
-    import { devAssert } from '../src/utils.js';
+  <head>
+    <title>Test devAssert</title>
+  </head>
+  <body>
+    <h1>devAssert Test</h1>
+    <p>Check the browser console for output.</p>
 
-    // This should work in dev mode and be eliminated in production builds
-    console.log('Testing devAssert from a browser context...');
+    <script type="module">
+      import { devAssert } from '../src/utils.js';
 
-    // This should pass
-    devAssert(true, 'This should pass');
-    console.log('devAssert(true) passed');
+      // This should work in dev mode and be eliminated in production builds
+      console.log('Testing devAssert from a browser context...');
 
-    // This should fail in dev mode
-    try {
-      devAssert(false, 'This should fail in dev mode');
-      console.log('devAssert(false) did not throw - likely in production mode');
-    } catch (error) {
-      console.log('devAssert(false) correctly threw error:', error.message);
-    }
-  </script>
-</body>
+      // This should pass
+      devAssert(true, 'This should pass');
+      console.log('devAssert(true) passed');
+
+      // This should fail in dev mode
+      try {
+        devAssert(false, 'This should fail in dev mode');
+        console.log(
+          'devAssert(false) did not throw - likely in production mode'
+        );
+      } catch (error) {
+        console.log('devAssert(false) correctly threw error:', error.message);
+      }
+    </script>
+  </body>
 </html>
