Fix RNG dependency injection: use SeededRandomNumberGenerator in tests
- Update all test files to use SeededRandomNumberGenerator for deterministic testing
- Fix GrainGenerator constructor calls to include required RNG parameter
- Update debug HTML files (grain-debug.html, grain-visualizer.html) to use SeededRandomNumberGenerator
- Maintain proper dependency injection pattern with required RNG parameter
- Ensure GrainProcessor provides DefaultRandomNumberGenerator fallback when needed
- All tests now use consistent seed (12345) for reproducible results
- Resolves TypeScript errors and 'Cannot read properties of undefined' runtime errors

--- a/public/grain-debug.html
+++ b/public/grain-debug.html
@@ -404,7 +404,10 @@
       }
 
       // Import the actual GrainGenerator class to avoid code duplication
-      import { GrainGenerator } from '../src/grain-generator.js';
+      import {
+        GrainGenerator,
+        SeededRandomNumberGenerator,
+      } from '../src/grain-generator.js';
 
       console.log(
         'GrainGenerator imported for debug visualization:',
@@ -430,7 +433,12 @@
           this.width = width;
           this.height = height;
           this.settings = settings;
-          this.grainGenerator = new GrainGenerator(width, height, settings);
+          this.grainGenerator = new GrainGenerator(
+            width,
+            height,
+            settings,
+            new SeededRandomNumberGenerator(12345)
+          );
         }
 
         // Analyze area coverage by checking how well grains cover the image
